# TableViewer

./: PLAN_2.0.0.md  README.md  package.json  vite.config.ts
.github/workflows/: release.yml
src/: main.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AppSidebar.vue  AppToolbar.vue  DataGrid.vue  JaqModal.vue  SelectionQueryModal.vue  SqlModal.vue  datatable.vue
src/composables/: useFiles.ts  useQuery.ts  useSearch.ts  useThemeZoom.ts
