[package]
name = "tableviewer"
version = "1.3.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "~2.6", features = [] }

[dependencies]
tauri = { version = "~2.11", features = [] }
tauri-plugin-dialog = "~2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
polars = { version = "0.40.0", features = ["parquet", "dtype-u8", "sql", "lazy", "ipc", "csv"] }

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
