[package]
name = "tableviewer"
version = "2.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "~2.6", features = [] }

[dependencies]
tauri            = { version = "~2.11", features = [] }
tauri-plugin-dialog = "~2.7"
serde            = { version = "1.0",         features = ["derive"] }
serde_json       = "1.0"
# dev: build with DUCKDB_DOWNLOAD_LIB=1 to skip the C++ compile (~seconds)
# CI/release: DUCKDB_DOWNLOAD_LIB=1 in the workflow env downloads the prebuilt static lib
duckdb           = { version = "~1.10504.0",  features = [] }
jaq-all          = "0.2"
serde_yaml       = "0.9"
quick-xml        = { version = "0.36",        features = ["serialize"] }
toml             = "0.8"

[profile.release]
panic         = "abort"    # Strip expensive panic clean-up logic
codegen-units = 1          # Compile crates one after another so the compiler can optimize better
lto           = true       # Enables link to optimizations
opt-level     = "s"        # Optimize for binary size
strip         = true       # Remove debug symbols
